import React from 'react';
import { shallow } from 'enzyme';
import { expensesReducerDefaultState } from '../test-helpers/MockData';
import { ExpenseListItem } from './ExpenseListItem';

const thunk = ({ dispatch, getState }) => next => action => {
  if (typeof action === 'function') {
    return action(dispatch, getState);
  }

  return next(action);
};
const create = () => {
  const store = {
    getState: jest.fn(() => ({})),
    dispatch: jest.fn(),
  };
  const next = jest.fn();
  const invoke = (action) => thunk(store)(next)(action);

  return { store, next, invoke };
};

it('passes through non-function action', () => {
  const { next, invoke } = create();
  const action = { type: 'TEST' };
  invoke(action);
  expect(next).toHaveBeenCalledWith(action);
});

it('calls the function', () => {
  const { invoke } = create();
  const fn = jest.fn();
  invoke(fn);
  expect(fn).toHaveBeenCalled();
});

it('passes dispatch and getState', () => {
  const { store, invoke } = create();
  invoke((dispatch, getState) => {
    dispatch('TEST DISPATCH');
    getState();
  });
  expect(store.dispatch).toHaveBeenCalledWith('TEST DISPATCH');
  expect(store.getState).toHaveBeenCalled();
});

it('should render ExpenseListItem with expenses', () => {
  const wrapper = shallow(<ExpenseListItem {...expensesReducerDefaultState[0]} />);
  expect(wrapper).toMatchSnapshot();
});

it('should render ExpenseListItem with empty message', () => {
  const wrapper = shallow(<ExpenseListItem />);
  expect(wrapper).toMatchSnapshot();
});
