// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListItem with empty message 1`] = `
<tr>
  <td />
  <td>
    $0.00
  </td>
  <td>
    December 31st, 1969
  </td>
  <td>
    <Link
      replace={false}
      to="/edit/undefined"
    >
      Edit
    </Link>
  </td>
</tr>
`;

exports[`should render ExpenseListItem with expenses 1`] = `
<tr>
  <td>
    January Rent
  </td>
  <td>
    $545.00
  </td>
  <td>
    January 2nd, 2018
  </td>
  <td>
    <Link
      replace={false}
      to="/edit/poijasdfhwer"
    >
      Edit
    </Link>
  </td>
</tr>
`;
